[build-system]
# Minimum requirements for the build system to execute.
requires = ["numpy", "setuptools", "wheel", "swig"]  # PEP 508 specifications.

[tool.autopep8]
max_line_length = 120
# ignore = ["E501", "W6"]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[pycodestyle]
max_line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "error",  # All warnings except below will be treated as errors
    "ignore::DeprecationWarning:.*past\\.builtins\\.misc:45",
    "ignore::DeprecationWarning:.*qc_snapshot_widget",
    "ignore:::.*quantify_core\\.visualization\\.pyqt_plotmon",
]

[tool.ruff]
lint.select = ["E", "F", "UP", "I"]
lint.ignore = [ #"UP031", # use format specifiers instead of percent format
            #"F401", # imported but unused
            "UP038",
        ]
line-length = 120

target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
exclude = ["oalib.py",  "../oalib.py"]

[tool.mypy-oalib.py]
follow_imports = "skip"
ignore_errors = true
