[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=2.0", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "oapackage"
dynamic = ["version"]
description = "Package to generate and analyse orthogonal arrays, conference designs and optimal designs"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Pieter Eendebak", email = "pieter.eendebak@gmail.com" }
]
keywords = ["orthogonal arrays", "design of experiments", "conference designs", "isomorphism testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "python-dateutil",
    "matplotlib",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "mock",
]
doc = [
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-napoleon",
    "breathe",
]

[project.urls]
Homepage = "http://www.pietereendebak.nl/oapackage/index.html"
Repository = "https://github.com/eendebakpt/oapackage"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.packages = ["oapackage"]
wheel.install-dir = "."
cmake.build-type = "Release"
logging.level = "INFO"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/version.h"
regex = 'const char \*__version__ = "(?P<value>[^"]+)"'

[tool.autopep8]
max_line_length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pycodestyle]
max_line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "error",  # All warnings except below will be treated as errors
    "ignore::DeprecationWarning:.*past\\.builtins\\.misc:45",
    "ignore::DeprecationWarning:.*qc_snapshot_widget",
    "ignore:::.*quantify_core\\.visualization\\.pyqt_plotmon",
]

[tool.ruff]
lint.select = ["E", "F", "UP", "I"]
lint.ignore = []
line-length = 120
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
exclude = ["oalib.py", "../oalib.py"]

[tool.mypy-oalib.py]
follow_imports = "skip"
ignore_errors = true
